<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>se.sics</groupId>
  <artifactId>ace</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>ACE library</name>
  <description>A java library for the ACE IETF WG</description>
  <organization>
  	<url>https://www.ri.se</url>
  	<name>RISE Research Institutes of Sweden AB</name>
  </organization>
  <repositories>
  	<repository>
	  <id>wso2-nexus</id>
	<url>http://maven.wso2.org/nexus/content/repositories/releases</url>
	</repository>
	 <repository>
      <id>repo.eclipse.org</id>
      <name>Californium Repository</name>
      <url>https://repo.eclipse.org/content/repositories/californium/</url>
    </repository>	
  </repositories>
  <dependencies>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.12</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>org.bouncycastle</groupId>
  		<artifactId>bcprov-jdk15on</artifactId>
  		<version>1.54</version>
  	</dependency>
  	<dependency>
  		<groupId>com.upokecenter</groupId>
  		<artifactId>cbor</artifactId>
  		<version>3.5.2</version>
  	</dependency>
  	<dependency>
  		<groupId>com.github.peteroupc</groupId>
  		<artifactId>numbers</artifactId>
  		<version>1.4.3</version>
  	</dependency>
  	<dependency>
  		<groupId>org.wso2.balana</groupId>
  		<artifactId>org.wso2.balana</artifactId>
  		<version>1.1.14</version>
  	</dependency>
  	<dependency>
  		<groupId>org.json</groupId>
  		<artifactId>json</artifactId>
  		<version>20180813</version>
  	</dependency>
  	<dependency>
    	<groupId>mysql</groupId>
    	<artifactId>mysql-connector-java</artifactId>
        <version>5.1.47</version>
    </dependency>
    <dependency>
		  <groupId>org.postgresql</groupId>
		  <artifactId>postgresql</artifactId>
		  <version>9.3-1104-jdbc4</version>
    </dependency>
	<dependency>
		<groupId>org.eclipse.californium</groupId>
		<artifactId>californium-core</artifactId>
		<version>2.0.0-SNAPSHOT</version>
	</dependency>
	<dependency>
		<groupId>org.eclipse.californium</groupId>
		<artifactId>scandium</artifactId>
		<version>2.0.0-SNAPSHOT</version>
	</dependency>
	<dependency>
		<groupId>org.eclipse.californium</groupId>
		<artifactId>cf-oscore</artifactId>
		<version>2.0.0-SNAPSHOT</version>
	</dependency>
	<dependency>
		<groupId>com.augustcellars.cose</groupId>
		<artifactId>cose-java</artifactId>
		<version>0.9.10</version>
	</dependency>
	   <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.5</version>
   </dependency>
   <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.7.5</version>
   </dependency> 
  </dependencies>
  <build>
	<plugins>
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<configuration>
				<source>1.8</source>
				<target>1.8</target>
			</configuration>
		</plugin>
	</plugins>
  </build>
</project>
